feat: added new page 'pandas.html'.

--- a/rsrcs/io_inputs/app/config/web_pages/home_(style).css
+++ b/rsrcs/io_inputs/app/config/web_pages/home_(style).css
@@ -136,6 +136,10 @@ ul {
         color: var(--colors_04);
     }
 
+    #pyscript_output_console_log_output {
+        max-width: 750px;
+    }
+
     .footer {
         background-color: var(--colors_01);
         color: var(--colors_background);
