refactor: re-ordered file structure to have one folder per html page.

--- a/rsrcs/io_inputs/app/config/web_pages/style.css
+++ b/rsrcs/io_inputs/app/config/web_pages/style.css
@@ -136,9 +136,9 @@ ul {
         color: var(--colors_04);
     }
 
-    #pyscript_output_console_log_output {
+    /* #pyscript_output_console_log_output {
         max-width: 750px;
-    }
+    } */
 
     .footer {
         background-color: var(--colors_01);
